fixed button clipping issue

--- a/src/pure-dialog.css
+++ b/src/pure-dialog.css
@@ -53,7 +53,6 @@ pure-dialog .pure-dialog-container {
     border-radius: 10px; 
     min-width: 260px;
     overflow: hidden;
-    padding-bottom: 40px;
     box-shadow: 0 1px 6px rgba(0,0,0,.06),0 2px 32px rgba(0,0,0,.16)!important;
 }
 
@@ -74,10 +73,6 @@ pure-dialog .pure-dialog-body {
 }
 
 pure-dialog .pure-dialog-buttons {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
     display: flex;
     background: #fff;
 }
